--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
     "start": "node ./src/server.js",
     "start:dev": "nodemon --inspect ./src/server.js",
     "start:prod": "node ./src/server.js",
-    "seed": "node ./scripts/seedDb.js"
+    "seed": "node ./scripts/seedDb.js",
+    "test": "jest --silent"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@faker-js/faker": "^8.0.2",
+    "babel-jest": "^29.5.0",
     "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22"
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "sequelize-mock": "^0.10.2",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=10.16.3"
